<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >




        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="7dp"
            android:background="@drawable/custom_design"
            android:textColor="#FFFF"
            android:textSize="18sp"
            android:text="@string/gias"
            />

        <View
            android:id="@+id/view2"
            android:layout_width="wrap_content"
            android:background="#FFFF"
            android:layout_height="2dp"
            android:layout_marginTop="5dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_design"
            android:layout_margin="10dp"
            android:padding="7dp"
            android:textColor="#FFFF"
            android:textSize="18sp"
            android:text="@string/heda" />

        <View
            android:id="@+id/view3"
            android:layout_width="wrap_content"
            android:background="#FFFF"
            android:layout_marginTop="5dp"
            android:layout_height="2dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_design"
            android:layout_margin="10dp"
            android:padding="7dp"
            android:textColor="#FFFF"
            android:textSize="18sp"
            android:text="@string/sha" />

        <View
            android:id="@+id/view4"
            android:layout_width="wrap_content"
            android:background="#FFFF"
            android:layout_marginTop="5dp"
            android:layout_height="2dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_design"
            android:layout_margin="10dp"
            android:padding="7dp"
            android:textColor="#FFFF"
            android:textSize="18sp"
            android:text="@string/nha" />

        <View
            android:id="@+id/view5"
            android:layout_width="wrap_content"
            android:background="#FFFF"
            android:layout_marginTop="5dp"
            android:layout_height="2dp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_design"
            android:layout_margin="10dp"
            android:padding="7dp"
            android:textColor="#FFFF"
            android:textSize="18sp"
            android:text="@string/du" />

        <View
            android:id="@+id/view6"
            android:layout_width="wrap_content"
            android:background="#FFFF"
            android:layout_marginTop="5dp"
            android:layout_height="2dp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_design"
            android:layout_margin="10dp"
            android:padding="7dp"
            android:textColor="#FFFF"
            android:textSize="18sp"
            android:text="@string/fa" />

        <View
            android:id="@+id/view8"
            android:layout_width="wrap_content"
            android:background="#FFFF"
            android:layout_marginTop="5dp"
            android:layout_height="2dp" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_design"
            android:layout_margin="10dp"
            android:padding="7dp"
            android:textColor="#FFFF"
            android:textSize="18sp"
            android:text="@string/sa" />

        <View
            android:id="@+id/view10"
            android:layout_width="wrap_content"
            android:background="#FFFF"
            android:layout_marginTop="5dp"
            android:layout_height="2dp" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_design"
            android:layout_margin="10dp"
            android:padding="7dp"
            android:textColor="#FFFF"
            android:textSize="18sp"
            android:text="@string/ar" />

        <View
            android:id="@+id/view12"
            android:layout_width="wrap_content"
            android:background="#FFFF"
            android:layout_marginTop="5dp"
            android:layout_height="2dp" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_design"
            android:layout_margin="10dp"
            android:padding="7dp"
            android:textColor="#FFFF"
            android:textSize="18sp"
            android:text="@string/mu" />

        <View
            android:id="@+id/view14"
            android:layout_width="wrap_content"
            android:background="#FFFF"
            android:layout_marginTop="5dp"
            android:layout_height="2dp" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_design"
            android:layout_margin="10dp"
            android:padding="7dp"
            android:textColor="#FFFF"
            android:textSize="18sp"
            android:text="@string/ra" />


    </LinearLayout>


</ScrollView>
