<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >


        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Department Head"
            android:layout_margin="10px"
            android:textColor="#5f0020"
            android:padding="7dp"
            android:fontFamily="arial"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <View
            android:id="@+id/view2"
            android:layout_width="wrap_content"
            android:background="#FFFF"
            android:layout_height="2dp" />



        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="@drawable/custom_design"
            android:textColor="#FFFF"
            android:textSize="18sp"
            android:layout_margin="15dp"

            android:autoLink="email"
            android:text="@string/at"
            />

        <View
            android:id="@+id/view3"
            android:layout_width="wrap_content"
            android:background="#FFFF"
            android:layout_height="2dp"
            android:layout_marginTop="5dp"  />
        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Junior Instructor"
            android:textColor="#5f0020"
            android:padding="7dp"
            android:fontFamily="arial"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <View
            android:id="@+id/view4"
            android:layout_width="wrap_content"
            android:background="#FFFF"
            android:layout_height="2dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_design"
            android:layout_margin="15dp"
            android:textColor="#FFFF"
            android:textSize="18sp"

            android:text="@string/af" />

        <View
            android:id="@+id/view5"
            android:layout_width="wrap_content"
            android:background="#FFFF"
            android:layout_height="2dp"
            android:layout_marginTop="5dp"  />
        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Department Teachers"
            android:textColor="#5f0020"
            android:padding="7dp"
            android:fontFamily="arial"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <View
            android:id="@+id/view6"
            android:layout_width="wrap_content"
            android:background="#FFFF"
            android:layout_height="2dp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_design"
            android:layout_margin="15dp"
            android:textColor="#FFFFFF"
            android:textSize="18sp"

            android:text="@string/ss" />

        <View
            android:id="@+id/view7"
            android:layout_width="wrap_content"
            android:background="#FFFF"
            android:layout_height="2dp"
            android:layout_marginTop="5dp"  />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_design"
            android:layout_margin="15dp"
            android:textColor="#FFFF"
            android:textSize="18sp"

            android:text="@string/nh" />

        <View
            android:id="@+id/view8"
            android:layout_width="wrap_content"
            android:background="#FFFF"
            android:layout_height="2dp"
            android:layout_marginTop="5dp"  />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_design"
            android:layout_margin="15dp"
            android:textColor="#FFFF"
            android:textSize="18sp"

            android:text="@string/ri" />

        <View
            android:id="@+id/view9"
            android:layout_width="wrap_content"
            android:background="#FFFF"
            android:layout_height="2dp"
            android:layout_marginTop="5dp"
            />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_design"
            android:layout_margin="15dp"
            android:textColor="#FFFF"
            android:textSize="18sp"

            android:text="@string/mi" />




    </LinearLayout>


</ScrollView>
